feat(backend): add page attachments
